# xDuinoRails_Railcom

./: .gitignore  .gitmodules  AGENTS.md  README.de.md  README.md  compile_all.sh  library.json  library.properties
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  railcom_tests[1]_include.cmake  test_dcc_message.cpp
tests/01_AutomaticLogonRegistrationTest/: 01_AutomaticLogonRegistrationTest.ino
tests/02_BasicLocomotiveIdentificationTest/: 02_BasicLocomotiveIdentificationTest.ino
tests/03_BlockOccupancyReportingTest/: 03_BlockOccupancyReportingTest.ino
tests/04_TargetedCvReadingTest/: 04_TargetedCvReadingTest.ino
tests/05_ConfirmingCvWritesTest/: 05_ConfirmingCvWritesTest.ino
tests/06_ReadingMultiByteCvsTest/: 06_ReadingMultiByteCvsTest.ino
tests/07_DisplayingLocomotiveLongNameTest/: 07_DisplayingLocomotiveLongNameTest.ino
tests/08_AutomaticFunctionIconMappingTest/: 08_AutomaticFunctionIconMappingTest.ino
tests/10_VerifyingTurnoutPositionTest/: 10_VerifyingTurnoutPositionTest.ino
tests/14_TriggeringAutomatedScenariosTest/: 14_TriggeringAutomatedScenariosTest.ino
tests/15_AutomaticRerailingDetectionTest/: 15_AutomaticRerailingDetectionTest.ino
tests/16_DynamicMotorLoadReportingTest/: 16_DynamicMotorLoadReportingTest.ino
tests/17_SimulatingFuelConsumptionTest/: 17_SimulatingFuelConsumptionTest.ino
tests/19_ReportingMechanicalDriveStatusTest/: 19_ReportingMechanicalDriveStatusTest.ino
tests/21_DisplayingManufacturerInfoTest/: 21_DisplayingManufacturerInfoTest.ino
tests/BlockOccupancyTest/: BlockOccupancyTest.ino
(+149 files in other folders)
